--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+Secret.plist
 .DS_Store
 Paper/
 ## User settings
