--- a/Server/Server/Makefile
+++ b/Server/Server/Makefile
@@ -1,3 +1,3 @@
 build:
-	    swiftc main.swift WebSocketServer.swift WebSocketClient.swift -o server
+	    swiftc main.swift WebSocketServer.swift WebSocketClient.swift RTMPServer.swift -o server
 	@echo Done! You can now run the executable: './server'
